--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .TopBar { 
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 80px;
+} */
+.logo {
+  padding: 20px 0px 0px 10px;
+}
+.logosize {
+  width: 70px;
+  height: 70px;
+}
+.Header {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.bgImage {
+  background-image: url(./assets/images/bg.png);
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  color: black;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.topleft {
+  padding: 10px 10px 0px 40px;
+}
+.bottomleft {
+  padding: 440px 10px 10px 10px;
+}
+@media (max-width: 768px) {
+  .bgImage {
+    background-image: url(./assets/images/responsivebackgroundimage.jpg);
+    color: black;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 18px;
   }
-  to {
-    transform: rotate(360deg);
+  .bottomleft {
+    padding: 625px 5px 0px 15px;
+  }
+  .topleft {
+    padding: 10px 10px 0px 20px;
   }
 }
